--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "homepage": "http://sae-nitk.github.io/",
+  "homepage": "http://sae-nitk.github.io/sae-nitk/",
   "name": "reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.2",
     "fuse.js": "^6.4.6",
-    "google-maps-react": "^2.0.6",
-    "mdbreact": "^5.0.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-elastic-carousel": "^0.11.5",
-    "react-facebook": "^8.1.4",
-    "react-icons": "^4.1.0",
+    "mdbreact": "^5.1.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-items-carousel": "^2.8.0",
     "react-js-pagination": "^3.0.3",
-    "react-multi-carousel": "^2.6.1",
+    "react-multi-carousel": "^2.6.3",
     "react-paginate": "^7.1.3",
-    "react-player": "^2.8.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll-text": "^1.0.1",
-    "react-slick": "^0.28.1",
-    "react-spring": "^9.2.3",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.3",
+    "react-styled-components": "^0.1.11",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
