--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sae-nitk.github.io/",
+  "homepage": "http://sae-nitk.github.io/sae-nitk/",
   "name": "reactjs",
   "version": "0.1.0",
   "private": true,
